# blue_chorus

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build-docs.yml  build-nightly-all-features.yml  build-nightly.yml  build-stable-all-features.yml  build-stable.yml  coverage.yml  lint.yml  test.yml
src/: bank.rs  cache.rs  channel.rs  filter.rs  lfo.rs  lib.rs  parameters.rs  tapped_delay_line.rs  waveform.rs
