[package]
name = "blue_chorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.4.0"
real_time_fir_iir_filters = "1.0.8"
rand = "0.8.5"
num = "0.4.3"

[lib]
name = "blue_chorus"
crate-type = ["cdylib"]