[package]
name = "blue_chorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.4.0"
real_time_fir_iir_filters = {version = "1.3.0", features = ["first_order", "first_order_rc", "second_order_sallen_key"], default-features = false}
saturation = {version = "0.1.16", default-features = false}
rand = "0.9.0"
num = "0.4.3"
moddef = "0.2.6"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[lib]
name = "blue_chorus"
crate-type = ["cdylib"]